--- a/DAL/DAL.vbproj
+++ b/DAL/DAL.vbproj
@@ -49,6 +49,10 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.SQLite, Version=1.0.106.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Program Files\System.Data.SQLite\2015\bin\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -93,6 +97,7 @@
     <Compile Include="PreferenciaDAL.vb" />
     <Compile Include="RepositorioFactory.vb" />
     <Compile Include="RepositorioSQL.vb" />
+    <Compile Include="RepositorioSQLite.vb" />
     <Compile Include="RepositorioSQLInstalador.vb" />
     <Compile Include="RepositorioTransaccional.vb" />
     <Compile Include="SectorDAL.vb" />
