--- a/Presentacion/App.config
+++ b/Presentacion/App.config
@@ -4,7 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
     </startup>
   <connectionStrings>
-    <add name="conn" connectionString="Data Source=localhost;Initial Catalog=TicketYa;Integrated Security=SSPI;"
-      providerName="System.Data.sqlclient" />
+    <!--<add name="conn" connectionString="Data Source=localhost;Initial Catalog=TicketYa;Integrated Security=SSPI;"
+      providerName="System.Data.sqlclient" />-->
+    <add name="db" connectionString="Data Source=comex.db;Version=3;New=False;Compress=True;"/>
   </connectionStrings>
 </configuration>
