Se cambia definitvamente el nombre a Comex

--- a/Presentacion/Presentacion.vbproj
+++ b/Presentacion/Presentacion.vbproj
@@ -8,13 +8,14 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{14431111-F89A-4864-AB70-FF148025E37D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>TicketYa.My.MyApplication</StartupObject>
-    <RootNamespace>TicketYa</RootNamespace>
+    <StartupObject>Comex.My.MyApplication</StartupObject>
+    <RootNamespace>Comex</RootNamespace>
     <AssemblyName>Comex</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -27,7 +28,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
