Se agregan vistas de alta/modificacion y buscar mas las clases para que llegue hasta la capa dal, solo carcaza de los metodos que todavia no hacen nada, se agrega una BD solo con la tabla proveedor

--- a/BE/BE.vbproj
+++ b/BE/BE.vbproj
@@ -108,6 +108,7 @@
     <Compile Include="SedeBE.vb" />
     <Compile Include="ShowBE.vb" />
     <Compile Include="ShowReporte.vb" />
+    <Compile Include="OperacionBE.vb" />
     <Compile Include="SillaBE.vb" />
     <Compile Include="TipoDescuentoBE.vb" />
     <Compile Include="TipoSectorBE.vb" />
