--- a/BLL/BLL.vbproj
+++ b/BLL/BLL.vbproj
@@ -82,6 +82,7 @@
     <Compile Include="GestorShowBLL.vb" />
     <Compile Include="GestorSillaBLL.vb" />
     <Compile Include="GestorUsuarioBLL.vb" />
+    <Compile Include="GestorOperacionesBLL.vb" />
     <Compile Include="GestorVentasBLL.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
