--- a/Presentacion/App.config
+++ b/Presentacion/App.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
+  </startup>
   <connectionStrings>
-    <!--<add name="conn" connectionString="Data Source=localhost;Initial Catalog=Comex;Integrated Security=SSPI;"
-      providerName="System.Data.sqlclient" />-->
-    <add name="db" connectionString="Data Source=comex.db;Version=3;New=False;Compress=True;"/>
+    <add name="conn" connectionString="Data Source=localhost;Initial Catalog=comex;Integrated Security=SSPI;"
+      providerName="System.Data.sqlclient" />
   </connectionStrings>
 </configuration>
